# Sign-Language-Recolonization

./: .gitignore  Implementaion copy.ipynb  Implementaion.ipynb  README.md  app.py  environment.yml  main.py  pyproject.toml  requirements.txt  test.ipynb  webapp.py
templates/: index.html
