[project]
name = "sign-language-recolonization"
version = "0.1.0"
description = ""
authors = [
    {name = "Ahmad10Raza", email = "rjaahmad60@gmail.com"}
]
requires-python = ">=3.10,<3.12"
dependencies = [
    "tensorflow==2.15.0",
    "mediapipe==0.10.9",
    "numpy (==1.24.3)",
    "flask (==2.2.5)",
    "pyttsx3 (>=2.98,<3.0)",
    "scipy (>=1.15.2,<2.0.0)",
    "opencv-python (>=4.11.0.86,<5.0.0.0)"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
